--- a/src/content/author.yaml
+++ b/src/content/author.yaml
@@ -1,9 +1,9 @@
 
-- id: Bayu Setiawan
+- id: Fadhil Dhanendra
   avatar: avatars/ghost.png
   bio: Junior frontend web developer and full-time weeb
   twitter: MirrorBottle
   facebook: MirrorBottle
-  website: https://bayusetiawan.netlify.app
+  website: https://hololive-info.netlify.app
   location: Samarinda, Indonesia
   profile_image: img/alex-knight-326705-unsplash.jpg
