--- a/src/content/author.yaml
+++ b/src/content/author.yaml
@@ -7,3 +7,12 @@
   website: https://hololive-info.netlify.app
   location: Samarinda, Indonesia
   profile_image: img/alex-knight-326705-unsplash.jpg
+
+- id: Bayu Setiawan
+  avatar: avatars/bayu.png
+  bio: Full pledged Nakiri-gumi
+  twitter: MirrorBottle
+  facebook: MirrorBottle
+  website: https://bayusetiawan.my.id
+  location: Samarinda, Indonesia
+  profile_image: img/bayu-background.png
